# thordata-python-sdk

./: .env.example  .gitignore  .gitmodules  ACCEPTANCE_COMPLETE.md  CHANGELOG.md  CLEANUP_PLAN.md  CONTRIBUTING.md  OPTIMIZATION_SUMMARY.md  README.md  README_INTEGRATION.md  WEB_SCRAPER_TOOLS_GUIDE.md  conftest.py  py.typed  pyproject.toml  requirements.txt  setup.py  smoke_proxy_protocols.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  integration-proxy.yml  integration.yml  pypi-publish.yml  python-test.yml
.llm_cache/: bundle_0001.txt  bundle_0002.txt  index.txt  meta.json
.venv-pypi/: pyvenv.cfg
.venv-pypi/Scripts/: activate  activate.bat
.venv-testpypi/: pyvenv.cfg
.venv-testpypi/Scripts/: activate  activate.bat
docs/: API_ALIGNMENT_SUMMARY.md  CLEANUP_SUMMARY.md  GIT_OPERATIONS_GUIDE.md  OUTPUT_FORMAT_ALIGNMENT.md  README.md  SDK_FEATURES_AND_USAGE.md  TOOL_COVERAGE_MATRIX.generated.md  browser_reference.md  serp_reference.md  serp_reference_legacy.md  universal_reference.md  web_scraper_tasks_reference.md
examples/: .env.example  async_high_concurrency.py  demo_account_and_usage.py  demo_browser_api.py  demo_browser_automation.py  demo_features.py  demo_namespace_api.py  demo_proxy_network.py  demo_scraping_browser.py  demo_serp_api.py  demo_serp_google_news.py  demo_universal.py  demo_web_scraper_api.py  demo_web_scraper_multi_spider.py  diagnose_network.py  full_acceptance_test.py  full_coverage_smoke.py  proxy_datacenter.py  proxy_isp.py  proxy_mobile.py  proxy_quickstart.py  proxy_residential.py  quick_start.py  quick_test.py  smoke_live.py  test_new_features.py  validate_env.py  verify_async_structured.py  verify_new_features.py  verify_run_task.py  verify_structured_serp.py
examples/cookbook/: ai_video_dataset_builder.py  ecommerce_price_tracker.py
examples/tools/: amazon_scraper.py  google_maps_scraper.py  social_media_scraper.py  youtube_downloader.py
scripts/: generate_tool_coverage_matrix.py  run_comprehensive_acceptance.py  run_coverage.sh  test_core_features.py
scripts/acceptance/: common.py  run_account_readonly.py  run_all_readonly.py  run_all_tools_coverage.py  run_isp_proxy_dedicated.py  run_locations.py  run_proxy_connectivity.py  run_proxy_users_readonly.py  run_quick_validation.py  run_serp.py  run_universal.py  run_web_scraper_text_tasks.py  run_web_scraper_video_tasks.py  run_whitelist_readonly.py
src/thordata/: __init__.py  _api_base.py  _common.py  _example_utils.py  _performance.py  _response_helpers.py  _tools_registry.py  _utils.py  async_client.py  async_unlimited.py  client.py  constants.py  demo.py  enums.py  env.py  exceptions.py  models.py  namespaces.py  parameters.py  response.py  retry.py  serp_engines.py  unlimited.py
src/thordata/browser/: __init__.py  exceptions.py  session.py
src/thordata/core/: __init__.py  async_http_client.py  http_client.py  tunnel.py
src/thordata/tools/: __init__.py  base.py  code.py  ecommerce.py  professional.py  search.py  social.py  travel.py  video.py
src/thordata/types/: __init__.py  common.py  proxy.py  serp.py  task.py  universal.py
tests/: conftest.py  test_async_client.py  test_async_client_errors.py  test_batch_creation.py  test_browser.py  test_client.py  test_client_errors.py  test_constants.py  test_enums.py  test_env.py  test_examples.py  test_examples_demo_serp_api.py  test_examples_demo_universal.py  test_exceptions.py  test_integration_connectivity.py  test_integration_full.py  test_integration_proxy_protocols.py  test_integration_serp_all_engines.py  test_models.py  test_namespaces.py  test_response.py  test_retry.py  test_spec_parity.py  test_tools.py  test_tools_coverage.py  test_tools_registry.py  test_unlimited.py  test_utils.py
thordata_sdk/: __init__.py  async_client.py  client.py  enums.py  parameters.py
