[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thordata-sdk"
version = "0.4.0"  # 版本号建议升级，因为有较大结构变化
description = "The Official Python SDK for Thordata - AI Data Infrastructure & Proxy Network."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Thordata Developer Team", email = "support@thordata.com"}
]
keywords = [
    "web scraping", 
    "proxy", 
    "residential proxy",
    "datacenter proxy",
    "ai", 
    "llm", 
    "data-mining", 
    "serp", 
    "thordata",
    "web scraper",
    "anti-bot bypass"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: Proxy Servers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

# 运行时依赖
dependencies = [
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
]

# 可选依赖（开发/测试用）
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.urls]
"Homepage" = "https://www.thordata.com"
"Documentation" = "https://github.com/Thordata/thordata-python-sdk#readme"
"Source" = "https://github.com/Thordata/thordata-python-sdk"
"Tracker" = "https://github.com/Thordata/thordata-python-sdk/issues"
"Changelog" = "https://github.com/Thordata/thordata-python-sdk/blob/main/CHANGELOG.md"

# Setuptools 配置
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thordata = ["py.typed"]  # 标记为类型化包

# Black 代码格式化配置
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

# Ruff 代码检查配置
[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
]
ignore = [
    "E501",  # line too long (handled by black)
    "E731",  # do not assign a lambda expression
    "F401",  # imported but unused (we have some intentional re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["thordata"]

# Mypy 类型检查配置
[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
strict_optional = false
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp.*", "requests.*"]
ignore_missing_imports = true

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=thordata --cov-report=term-missing"

# Coverage 配置
[tool.coverage.run]
source = ["src/thordata"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]